--- a/src/Sandbox/MainBundle/Resources/views/Demo/controller.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/Demo/controller.html.twig
@@ -1,7 +1,7 @@
 {% extends "SandboxMainBundle::skeleton.html.twig" %}
 
 {% block content %}
-<div class="articleContainer">
+<div class="articleContainer hero-unit">
     <p><em>This is a template used by the sandbox controller</em></p>
     <h1 id="main_title">{{ page.title }}</h1>
     <div>
