--- a/src/Sandbox/TestBundle/Resources/views/Test/index.html.twig
+++ b/src/Sandbox/TestBundle/Resources/views/Test/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "SandboxMainBundle::skeleton.html.twig" %}
 
 {% block content %}
-<div>
+<div class="hero-unit">
     <h1>Hello World!</h1>
     <p>This is a template used by the TestController found with a standard symfony route.</p>
 </div>
