integrating the simple cms bundle into the sandbox

--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -152,6 +152,20 @@ hr {
     text-align: right;
 }
 
+#menu-service li {
+    display: inline;
+}
+
+#menu-service li:after {
+    content: " |";
+    color: #ccc;
+}
+
+#menu-service li:last-child:after {
+    content: none;
+}
+
+
 @media (max-width: 767px) {
 
     #banner .hero-unit h1 {
