--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -116,6 +116,9 @@
             <hr/>
 
             <div id="footer" class="row">
+                <div id="menu-service">
+                    {{ knp_menu_render('service') }}
+                </div>
                 <div class="span12">
                 {% block footer %}
                     <p>Powered by <a href="http://cmf.symfony.com/">Symfony CMF</a></p>
