fixed tags display and styling

--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -141,6 +141,19 @@ hr {
     position: relative;
 }
 
+.articleContainer ul.tags {
+    margin: 0;
+}
+
+.articleContainer ul.tags li {
+    margin-right: .5em;
+    display: inline;
+    background-color: #4B4B4B;
+    font-size: 1em;
+    padding: 2px 4px 4px 4px;
+    font-weight: normal;
+}
+
 .articleContainer > * {
 }
 
