--- a/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
@@ -9,7 +9,9 @@
 
     <ul rel="dc:subject" property="dc:subject" class="tags">
         {% for subject in page.tags %}
-        <li about="{{ subject|replace({'<': '', '>': ''}) }}"></li>
+        <li class="label" about="{{ subject|replace({'<': '', '>': ''}) }}">
+            {{ subject|trim('<urn:tag:')|trim('>') }}
+        </li>
         {% endfor %}
     </ul>
     <h1 id="main_title" property="dcterms:title">{{ page.title|raw }}</h1>
