--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -21,27 +21,28 @@
             {% endstylesheets %}
 
             {% if is_granted("IS_AUTHENTICATED_ANONYMOUSLY") %}
-        {# TODO: look into assetic rewriting image paths in css #}
-        <link rel="stylesheet" href="/bundles/liipvie/vendor/create/themes/midgard-tags/tags.css" media="screen" type="text/css"/>
-        <link rel="stylesheet" href="/bundles/liipvie/vendor/create/themes/create-ui/css/create-ui.css" media="screen" type="text/css"/>
-        <link rel="stylesheet" href="/bundles/liipvie/vendor/create/themes/midgard-notifications/midgardnotif.css" media="screen" type="text/css"/>
-        <link rel="stylesheet" href="/bundles/liipvie/vendor/create/examples/font-awesome/css/font-awesome.css" media="screen" type="text/css"/>
-        {% stylesheets
-        '@LiipVieBundle/Resources/public/css/halloLiipStyle.css'
-        '@LiipVieBundle/Resources/public/vendor/hallo/examples/overlay.css'
-        '@LiipVieBundle/Resources/halloplugins/image.css'
-        '@LiipVieBundle/Resources/halloplugins/link.css'
-        %}
-        <link rel="stylesheet" href="{{ asset_url }}" media="screen" type="text/css"/>
-        {% endstylesheets %}
+                {% stylesheets '@LiipVieBundle/Resources/public/vendor/hallo/examples/Aristo/jquery-ui-1.8.7.custom.css'
+                            '@LiipVieBundle/Resources/public/css/halloLiipStyle.css'
+                            '@LiipVieBundle/Resources/public/vendor/hallo/examples/overlay.css'
+                            '@LiipVieBundle/Resources/halloplugins/image.css'
+                            '@LiipVieBundle/Resources/halloplugins/link.css'
+                %}
+                    <link rel="stylesheet" href="{{ asset_url }}" media="screen" type="text/css"/>
+                {% endstylesheets %}
+                <link rel="stylesheet" href="/bundles/liipvie/vendor/create/themes/midgard-tags/tags.css" media="screen" type="text/css"/>
             {% endif %}
-"
         {% endblock %}
 
         {% block top_scripts %}
         {% endblock %}
     </head>
     <body>
+        {% if is_granted("IS_AUTHENTICATED_ANONYMOUSLY") %}
+            <div id="userBar">
+                <div class="inner"><button class="saveButton">Saved</button></div>
+            </div>
+        {% endif %}
+
         <div class="container">
 
             <div id="top" class="row">
