--- a/vagrant/cookbooks/local/templates/default/vhost.conf.erb
+++ b/vagrant/cookbooks/local/templates/default/vhost.conf.erb
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
-  Servername localhost
-  Serveralias cmf.lo
+  Servername cmf.lo
+  Serveralias 172.22.22.22
   DocumentRoot /vagrant/web
   <Directory "/vagrant/web">
     AllowOverride All
