--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content=" minimum-scale=1.0, maximum-scale=1.0, width=device-width; user-scalable=no">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>{% block title %}{{ title|default('CMF Sandbox') }}{% endblock %}</title>
+        <title>{% block title %}{{ title|default('CMF Sandbox')|striptags }}{% endblock %}</title>
 
         {% block includes %}
             {% stylesheets
