--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -65,7 +65,7 @@
                 <div id="banner" class="span12">
                     <a href="https://github.com/symfony-cmf/cmf-sandbox"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"/></a>
                     <div class="hero-unit">
-                        <h1 id="logo-text"><a href="{{ asset('') }}">CMF Sandbox</a></h1>
+                        <h1 id="logo-text"><a href="{{ path('', {'content_id': '/cms/routes'}) }}">CMF Sandbox</a></h1>
                         <p id="slogan">Symfony2 Content Management Framework</p>
                     </div>
                 </div>
