--- a/src/Sandbox/MainBundle/Resources/views/MultilangStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/MultilangStaticContent/index.html.twig
@@ -2,7 +2,11 @@
 
 {% block content %}
 
-<div xmlns:sioc="http://rdfs.org/sioc/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:dcterms="http://purl.org/dc/terms/"
+{% createphp page as="rdf" %}
+{{ rdf|raw }}
+{% endcreatephp %}
+
+{# <div xmlns:sioc="http://rdfs.org/sioc/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:dcterms="http://purl.org/dc/terms/"
      typeof="sioc:Post"
      about="{{ page.path }}"
      class="articleContainer hero-unit">
@@ -20,6 +24,7 @@
         <div class="clearfix"></div>
     </div>
 </div>
+#}
 
 <hr/>
 
