--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -54,7 +54,7 @@
                     <div id="language_selector" class="pull-right">
                         {% block language_selector %}
                             {% if page is defined %}
-                                {% render "symfony_cmf_multilang_content.languageSelectorController:languagesAction" with {"id" : page.path, "languageUrls": languageUrls|default(false) } %}
+                                {% render "symfony_cmf_multilang_content.languageSelectorController:languagesAction" with {"id" : path, "languageUrls": languageUrls|default(false) } %}
                             {% endif %}
                         {% endblock %}
                     </div>
