--- a/src/Sandbox/MainBundle/Resources/views/Demo/controller.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/Demo/controller.html.twig
@@ -5,7 +5,7 @@
     <p><em>This is a template used by the sandbox controller</em></p>
     <h1 id="main_title">{{ page.title }}</h1>
     <div>
-        {{ page.content|raw }}
+        {{ page.body|raw }}
     </div>
     <p style="color: green">{{ example }}</p>
 </div>
