--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -28,6 +28,7 @@
                 <link rel="stylesheet" href="/bundles/liipvie/vendor/create/examples/font-awesome/css/font-awesome.css" media="screen" type="text/css"/>
                 {% stylesheets
                     '@LiipVieBundle/Resources/public/css/halloLiipStyle.css'
+                    '@LiipVieBundle/Resources/public/css/createStyle.css'
                 %}
                 <link rel="stylesheet" href="{{ asset_url }}" media="screen" type="text/css"/>
                 {% endstylesheets %}
