--- a/vagrant/cookbook/templates/default/jackrabbit.erb
+++ b/vagrant/cookbook/templates/default/jackrabbit.erb
@@ -27,7 +27,7 @@
 # Directory in which jackrabbit will store local data, must be writeable
 BASEDIR=/opt/jackrabbit
 # Full filename of jackrabbit standalone .jar to run
-JACKRABBIT_JAR=$BASEDIR/jackrabbit-standalone-2.4.2.jar
+JACKRABBIT_JAR=$BASEDIR/jackrabbit.jar
 # IP address for jackrabbit to listen on. you can make jackrabbit listen on all
 # interfaces by using 0.0.0.0 here.
 JACKRABBIT_HOST=0.0.0.0
