--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -21,17 +21,7 @@
             {% endstylesheets %}
 
             {% if is_granted("IS_AUTHENTICATED_ANONYMOUSLY") %}
-                {# TODO: look into assetic rewriting image paths in css #}
-                <link rel="stylesheet" href="/bundles/liipvie/vendor/create/themes/midgard-tags/tags.css" media="screen" type="text/css"/>
-                <link rel="stylesheet" href="/bundles/liipvie/vendor/create/themes/create-ui/css/create-ui.css" media="screen" type="text/css"/>
-                <link rel="stylesheet" href="/bundles/liipvie/vendor/create/themes/midgard-notifications/midgardnotif.css" media="screen" type="text/css"/>
-                <link rel="stylesheet" href="/bundles/liipvie/vendor/create/examples/font-awesome/css/font-awesome.css" media="screen" type="text/css"/>
-                {% stylesheets
-                    '@LiipVieBundle/Resources/public/css/halloLiipStyle.css'
-                    '@LiipVieBundle/Resources/public/css/createStyle.css'
-                %}
-                <link rel="stylesheet" href="{{ asset_url }}" media="screen" type="text/css"/>
-                {% endstylesheets %}
+                {% include "SymfonyCmfCreateBundle::includecssfiles.html.twig" %}
             {% endif %}
         {% endblock %}
 
@@ -124,9 +114,7 @@
         </div>
 
         {% block bottom_scripts %}
-            {% if is_granted("IS_AUTHENTICATED_ANONYMOUSLY") %}
-                {% render "liip_vie.controller.vie:includeJSFilesAction" %}
-            {% endif %}
+            {% render "symfony_cmf_create.jsloader.controller:includeJSFilesAction" %}
         {% endblock %}
     </body>
 </html>
