--- a/src/Sandbox/MainBundle/Resources/views/Demo/template_explicit.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/Demo/template_explicit.html.twig
@@ -3,7 +3,7 @@
 
 {% block content %}
 <p><em>This is a template explicitly specified by a route</em></p>
-{% createphp page as="rdf" %}
+{% createphp cmfMainContent as="rdf" %}
     {{ rdf|raw }}
 {% endcreatephp %}
 {{ parent() }}
