--- a/src/Sandbox/MainBundle/Resources/views/Homepage/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/Homepage/index.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <p><em>We are on the homepage which uses a special template</em></p>
 
-    {% createphp page as="rdf" %}
+    {% createphp cmfMainContent as="rdf" %}
     {{ rdf|raw }}
     {% endcreatephp %}
 
