--- a/src/Sandbox/MainBundle/Resources/views/MultilangStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/MultilangStaticContent/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-{% createphp page as="rdf" %}
+{% createphp cmfMainContent as="rdf" %}
 {{ rdf|raw }}
 {% endcreatephp %}
 
