--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -116,6 +116,8 @@
         {% block bottom_scripts %}
             {% render "symfony_cmf_create.jsloader.controller:includeJSFilesAction" %}
         {% endblock %}
+        {% block custom_scripts %}
+        {% endblock %}
     </body>
 </html>
 
