--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -208,3 +208,6 @@ hr {
         margin-bottom: 0;
     }
 }
+
+/* Hide the news content by default on the news list page */
+div.newscontent { display: none; }
