--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -211,3 +211,11 @@ hr {
 
 /* Hide the news content by default on the news list page */
 div.newscontent { display: none; }
+
+/*
+ * Hack: hide the duplicate "+Add" buttons.
+ * See https://github.com/flack/createphp/issues/29 for more
+ */
+.newsoverview button:last-child {
+    display: none !important;
+}
