temporary CSS hack to hide multiple add buttons

--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -213,9 +213,12 @@ hr {
 div.newscontent { display: none; }
 
 /*
- * Hack: hide the duplicate "+Add" buttons.
- * See https://github.com/flack/createphp/issues/29 for more
+ * Temporary hack: hide the duplicate "+Add" buttons.
+ * See https://github.com/flack/createphp/issues/29
  */
-.newsoverview button:last-child {
+.newsoverview button {
     display: none !important;
+}
+.newsoverview button:last-child {
+    display: block !important;
 }
