--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -107,7 +107,7 @@
                 </div>
                 <div class="span12">
                 {% block footer %}
-                    <p>Powered by <a href="http://cmf.symfony.com/">Symfony CMF</a> | Frontend editing founded in part by <a href="http://www.iks-project.eu/">IKS</a></p>
+                    <p>Powered by <a href="http://cmf.symfony.com/">Symfony CMF</a> | Frontend editing funded in part by <a href="http://www.iks-project.eu/">IKS</a></p>
                     {% endblock %}
                 </div>
             </div>
