--- a/src/Sandbox/MainBundle/Resources/views/Admin/switcher_links.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/Admin/switcher_links.html.twig
@@ -1,4 +1,4 @@
 Switch to :
 {% for locale in locales %}
-    {% if loop.index > 1 %} | {% endif %}<a href="{{ locale.link }}" title="{{ locale.locale_current_language }}">{{ locale.locale_current_language }}</a>
+    {% if loop.index > 1 %} | {% endif %}<a href="{{ locale.link }}" title="{{ locale.locale_target_language }}">{{ locale.locale_target_language }}</a>
 {% endfor %}
