--- a/src/Sandbox/MainBundle/Resources/views/Homepage/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/Homepage/index.html.twig
@@ -15,15 +15,21 @@
         }) }}
     </div>
 
-    <div>
-        <h2>Some additional links:</h2>
-        <ul>
-            {% for child in cmf_children(cmf_find('/cms/simple/service')) %}
-                <li>
-                    <a href="{{ path(child) }}">{{ child.title|striptags }}</a>
-                </li>
-            {% endfor %}
-        </ul>
+    <div class="row">
+        <div class="span3">
+            <h2>Some additional links:</h2>
+            <ul>
+                {% for child in cmf_children(cmf_find('/cms/simple/service')) %}
+                    <li>
+                        <a href="{{ path(child) }}">{{ child.title|striptags }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+
+        {{ sonata_block_render({
+            'name': 'rssBlock'
+        }) }}
     </div>
 {% endblock %}
 
