finalization of the localizable news system

--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -210,4 +210,4 @@ hr {
 }
 
 /* Hide the news content by default on the news list page */
-div.newscontent { display: none; }
+div.newsmeta { display: none; }
