--- a/src/Sandbox/MainBundle/Resources/views/News/news_overview.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/News/news_overview.html.twig
@@ -9,13 +9,19 @@
 <div class="newsoverview" {{ createphp_attributes(rdf) }}>
     <h2 {{ createphp_attributes( rdf.title ) }}>{{ createphp_content( rdf.title ) }}</h2>
     <p {{ createphp_attributes( rdf.body ) }}>{{ createphp_content( rdf.body|raw ) }}</p>
+    <div class="newsmeta">
+        <div>Locale: <span class="newslocale" {{ createphp_attributes(rdf.locale) }}>{{ createphp_content(rdf.locale) }}</span></div>
+    </div>
     <ul {{ createphp_attributes( rdf.children ) }}>
         {% for news in cmfMainContent.children %}
         {% createphp news noautotag %}
         <li {{ createphp_attributes(news_rdf) }}>
             <a href="{{ path(news) }}" {{ createphp_attributes(news_rdf.title) }}>{{ createphp_content(news_rdf.title) }}</a>
                 (<span class="newsdate">{{ news.publishStartDate | date('Y-m-d')  }}</span>)
-            <div class="newscontent" {{ createphp_attributes(news_rdf.body) }}>{{ createphp_content(news_rdf.body) }}</div>
+            <div class="newsmeta">
+                <div  {{ createphp_attributes(news_rdf.body) }}>{{ createphp_content(news_rdf.body) }}</div>
+                <div class="newslocale">Locale: <span {{ createphp_attributes(news_rdf.locale) }}>{{ createphp_content(news_rdf.locale) }}</span></div>
+            </div>
         </li>
         {% endcreatephp %}
         {% endfor %}
@@ -32,9 +38,9 @@
         //show / hide the news content according to the mode (edit / view)
         $('body').bind('midgardcreatestatechange', function (event, options) {
             if (options.state == 'edit') {
-                $('div.newscontent').show();
+                $('div.newsmeta').show();
             } else {
-                $('div.newscontent').hide();
+                $('div.newsmeta').hide();
             }
 
             /**
