--- a/src/Sandbox/MainBundle/Resources/views/News/news_detail.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/News/news_detail.html.twig
@@ -9,6 +9,10 @@
     <div class="subtitle">Date: {{ cmfMainContent.publishStartDate| date('Y-m-d') }}</div>
     <p {{ createphp_attributes( rdf.body ) }}>{{ createphp_content( rdf.body ) }}</p>
 
+    <div class="newsmeta">
+        <div class="newslocale">Locale: <span {{ createphp_attributes(rdf.locale) }}>{{ createphp_content(rdf.locale) }}</span></div>
+    </div>
+
     {% set prev = cmf_prev(cmfMainContent) %}
     {% if prev %}
         <a href="{{ path(prev) }}">prev</a>
@@ -22,4 +26,19 @@
 </div>
 {% endcreatephp %}
 
+{% endblock %}
+
+{% block custom_scripts %}
+<script type="text/javascript">
+    $(document).ready(function() {
+        //show / hide the news content according to the mode (edit / view)
+        $('body').bind('midgardcreatestatechange', function (event, options) {
+            if (options.state == 'edit') {
+                $('div.newsmeta').show();
+            } else {
+                $('div.newsmeta').hide();
+            }
+        });
+    });
+</script>
 {% endblock %}
