switch to Symfony2.2

--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -114,7 +114,7 @@
         </div>
 
         {% block bottom_scripts %}
-            {% render "symfony_cmf_create.jsloader.controller:includeJSFilesAction" %}
+            {% render controller("symfony_cmf_create.jsloader.controller:includeJSFilesAction") %}
         {% endblock %}
     </body>
 </html>
