--- a/src/Sandbox/MainBundle/Resources/views/Admin/user_block.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/Admin/user_block.html.twig
@@ -2,5 +2,6 @@
 
 {% block user_block %}
     {{ locale_switcher(null, null, 'SandboxMainBundle:Admin:switcher_links.html.twig') }}
+    - Welcome {{ app.user.username }} {# <a href="{{ path('fos_user_security_logout') }}">Logout</a> #}
     {{ parent() }}
 {% endblock %}
